test/Parse/ConditionalCompilation/can_import_in_inactive.code
// RUN: %empty-directory(%t)
// RUN: mkdir -p %t/Modules/SomeModule.codemodule
// RUN: echo 'DUMMY' > %t/Modules/SomeModule.codemodule/i386.codemodule
// RUN: not %target-language-frontend -typecheck -I %t/Modules %s 2>&1 | %FileCheck %s

// REQUIRES: CPU=x86_64

// Testing 'canImport()' not emitting error in inactive #if .. #endif blocks.

#if false
#if canImport(SomeModule) // Ok
// CHECK-NOT: :[[@LINE-1]]:
#endif
#endif

#if true
#else
#if canImport(SomeModule) // Ok
// CHECK-NOT: :[[@LINE-1]]:
#endif
#endif

#if canImport(SomeModule)
// CHECK: :[[@LINE-1]]:{{.*}}: error: could not find module 'SomeModule' for target '{{.*}}'; found: i386
#endif

import SomeModule
